--- a/01_表单/index.html
+++ b/01_表单/index.html
@@ -22,20 +22,20 @@
     <form class="container">
         <h1>用户注册</h1>
         <div class="form-item">
-            <input type="text" placeholder="请输入 11 位手机号" maxlength="11" />
+            <input class="txt" type="text" placeholder="请输入 11 位手机号" maxlength="11" />
+        </div>
+        <div class="form-item clear-fix captcha">
+            <input class="txt fl" type="text" placeholder="请填写验证码">
+            <button type="button" class="fr">发送验证码</button>
         </div>
         <div class="form-item">
-            <input type="text" placeholder="请填写验证码">
-            <button type="button">发送验证码</button>
+            <input class="txt" type="password" name="" id="" placeholder="请输入密码">
         </div>
         <div class="form-item">
-            <input type="password" name="" id="" placeholder="请输入密码">
+            <input class="txt" type="password" name="" id="" placeholder="请再次确认密码">
         </div>
         <div class="form-item">
-            <input type="password" name="" id="" placeholder="请再次确认密码">
-        </div>
-        <div class="form-item">
-            <select name="" id="" multiple="multiple">
+            <select name="" id="" multiple class="txt">
                 <option>爱好1</option>
                 <option>爱好2</option>
                 <option>爱好3</option>
@@ -48,9 +48,9 @@
                 <option>爱好10</option>
             </select>
         </div>
-        <div class="form-item">
-            <div class="title">性别</div>
-            <div>
+        <div class="form-item clear-fix">
+            <div class="title fl">性别</div>
+            <div class="fl">
                 <label>
                     <input type="radio" name="sex" id="male" checked>
                     <span>男</span>
@@ -62,9 +62,9 @@
             </div>
         </div>
         <div class="form-item">
-            <textarea name="" id="" placeholder="请输入个人简介"></textarea>
+            <textarea class="txt" name="" id="" placeholder="请输入个人简介"></textarea>
         </div>
-        <div class="form-item">
+        <div class="form-item policy">
             <label>
                 <input type="checkbox" name="" id="">
                 <span>我已阅读并同意《用户协议》</span>
