React：001-B-最小化实践-CDN-JSX

--- a/React/001-A-最小化实践-CDN/index.html
+++ b/React/001-A-最小化实践-CDN/index.html
@@ -11,6 +11,8 @@
     <div id="root"></div>
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <!-- <script src="../../.lib/react@18.3.1.umd.development.js" crossorigin></script> -->
+    <!-- <script src="../../.lib/react-dom@18.3.1.umd.development.js" crossorigin></script> -->
     <script>
         // 组件：页面上的一部分
         // 点击收藏或取消收藏
