--- a/React/02-01-06-JSX-组件传参/index.html
+++ b/React/02-01-06-JSX-组件传参/index.html
@@ -45,7 +45,7 @@
                             <li
                                 key={item.id}
                                 style={{ color: item.type === 'vegetable' ? 'green' : 'red' }}
-                                onClick={() => setCount(count + 1)} F
+                                onClick={() => setCount(count + 1)}
                             >{item.title}</li>
                         ))
                     }
